docs: mark batch 4 checkpoints complete

--- a/docs/plans/v0.3-batch4-checkpoints-ux.md
+++ b/docs/plans/v0.3-batch4-checkpoints-ux.md
@@ -4,13 +4,13 @@
 
 **Duration estimate**: 2–3 days  
 **Depends on**: Batch 2 (validation triggers checkpoints), Batch 3 (commit SHAs in progress)  
-**Status**: Not started
+**Status**: Complete
 
 ---
 
 ## Deliverables
 
-### 4.1 Progress summaries with cost
+### 4.1 Progress summaries with cost ✅ Done (D5 from batch 3)
 
 After each task completes, emit a deterministic summary. No LLM needed — computed from `OrchestratorState`.
 
@@ -37,7 +37,7 @@ export function formatProgressSummary(summary: TaskProgressSummary): string;
 
 **Test**: Unit test for `computeProgressSummary` with various state snapshots. Test estimated cost calculation.
 
-### 4.2 Checkpoint pause points
+### 4.2 Checkpoint pause points ✅ Done
 
 At configurable intervals, pause execution and prompt the user.
 
@@ -73,7 +73,7 @@ Trigger: [scheduled / test failure in X / budget warning]
 
 **Test**: Unit test: mock state at 50% completion + budget at warnAtUsd → checkpoint fires. Mock state under budget → no checkpoint. Test failure trigger → forces checkpoint regardless of cadence.
 
-### 4.3 Minimal plan revision at checkpoints
+### 4.3 Minimal plan revision at checkpoints ✅ Done
 
 When user selects "Adjust plan" at a checkpoint, present the remaining tasks for subtractive editing.
 
@@ -112,7 +112,7 @@ export function applyPlanAdjustment(
 
 **Test**: Unit test for `applyPlanAdjustment`: drop 2 tasks → verify state.tasks shrinks. Reorder → verify new order. Skip → verify status. Attempt to drop completed task → rejected.
 
-### 4.4 Post-task context forwarding
+### 4.4 Post-task context forwarding ✅ Done (D6 from batch 3)
 
 Each implementer gets a lightweight summary of what prior tasks changed.
 
